--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "bootstrap": "^4.6.0",
+    "react-bootstrap": "^1.4.3",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
