--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "bootstrap": "^4.6.0",
-    "react-bootstrap": "^1.4.3",
     "express": "^4.17.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/react-bootstrap": "^0.32.25",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
@@ -62,4 +64,4 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^2.2.1"
   }
-} 
+}
