--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
@@ -10,10 +12,8 @@
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
@@ -48,7 +48,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/react-bootstrap": "^0.32.25",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
