--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.5",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "zod": "^2.0.0-beta.30"
   },
   "scripts": {
     "start": "react-scripts start",
