--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "typescript": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
