--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,11 +12,10 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": true,
-      "outDir":"dist",
+      "outDir":"./dist",
     },
     "include": [
-      "src"
+      "./src/*"
     ]
   }
   
