--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+    "lint": "tsc --noEmit && eslint --fix src/**/*.ts{,x}"
   },
   "eslintConfig": {
     "extends": [
