--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "lint": "eslint --fix src/**/*.ts{,x}",
         "typecheck": "tsc --noEmit"
     },
+    "proxy": "http://localhost:8000",
     "browserslist": {
         "production": [
             ">0.2%",
