added session management to account service

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,5 +1,6 @@
-PORT=
-DB=
-DB_HOST=
-DB_USER=
-DB_PASS=
+PORT=8000
+DB=bikeapp
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=""
+SECRET=supersecretGroupHsecret
