--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,15 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.5",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "typescript": "^4.1.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/mysql": "^2.15.17"
   }
 }
