--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=8080
 DB=bikeapp
 DB_HOST=localhost
-DB_USER=root
-DB_PASS=""
+DB_USER=user
+DB_PASS=!1234groupH
 SECRET=supersecretGroupHsecret
