--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "watch": "nodemon src/app.ts",
-    "prod": "node ./dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/server.ts",
+    "watch": "nodemon src/server.ts",
+    "prod": "node ./dist/server.js",
+    "test": "jest --runInBand",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
   },
@@ -29,7 +29,17 @@
     "@types/express-session": "^1.17.3",
     "@types/mysql": "^2.15.17",
     "chalk": "^3.0.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/src"
+    ]
   }
 }
