--- a/backend/package.json
+++ b/backend/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "bikeapp-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "ts-node src/server.ts",
-    "watch": "nodemon src/server.ts",
-    "prod": "node ./dist/server.js",
-    "test": "jest",
-    "build": "tsc --build",
-    "clean": "tsc --build --clean"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-mysql-session": "^2.1.5",
-    "express-session": "^1.17.1",
-    "mysql": "^2.18.1",
-    "typescript": "^4.1.5"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.11",
-    "@types/express-session": "^1.17.3",
-    "@types/mysql": "^2.15.17",
-    "chalk": "^3.0.0",
-    "execsql": "0.0.3",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "superagent": "^6.1.0",
-    "supertest": "^6.1.3",
-    "ts-node": "^9.1.1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/src"
-    ]
-  }
+	"name": "bikeapp-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "ts-node src/server.ts",
+		"watch": "nodemon src/server.ts --ignore report.json",
+		"prod": "node ./dist/server.js",
+		"test": "jest",
+		"build": "tsc --build",
+		"clean": "tsc --build --clean"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.0",
+		"body-parser": "^1.19.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-mysql-session": "^2.1.5",
+		"express-session": "^1.17.1",
+		"mysql": "^2.18.1",
+		"typescript": "^4.1.5"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^3.0.0",
+		"@types/express": "^4.17.11",
+		"@types/express-session": "^1.17.3",
+		"@types/mysql": "^2.15.17",
+		"chalk": "^3.0.0",
+		"execsql": "0.0.3",
+		"jest": "^26.6.3",
+		"nodemon": "^2.0.7",
+		"superagent": "^6.1.0",
+		"supertest": "^6.1.3",
+		"ts-node": "^9.1.1"
+	},
+	"jest": {
+		"testEnvironment": "node",
+		"coveragePathIgnorePatterns": [
+			"/node_modules/",
+			"/src"
+		]
+	}
 }
