--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "react-loader-spinner": "^4.0.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.2",
+        "serve": "^11.3.2",
         "typescript": "^4.1.5",
         "web-vitals": "^1.1.0",
         "zod": "^2.0.0-beta.30"
